[gd_scene load_steps=5 format=3 uid="uid://bdybdbn2h4iyd"]

[ext_resource type="Theme" uid="uid://bbfbat2tvws7t" path="res://Art/UI_theme.tres" id="1_51ffj"]
[ext_resource type="Script" uid="uid://d066vn2yge5gr" path="res://Code/play_screen.gd" id="1_m3avx"]
[ext_resource type="Texture2D" uid="uid://dsg2tmui8bytf" path="res://Art/ui/Sound.png" id="2_51ffj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg7cd"]
bg_color = Color(0.436152, 0.628086, 0.748181, 1)
border_width_left = 100
border_width_top = 100
border_width_right = 100
border_width_bottom = 100
border_color = Color(0.554989, 0.721413, 0.829408, 1)
border_blend = true

[node name="Play Screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_51ffj")
script = ExtResource("1_m3avx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_bg7cd")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="left buffer" type="Control" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Left Section" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="RichTextLabel" parent="Panel/HBoxContainer/Left Section"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 25
text = "You are a wizard in search of magical knowledge and power, and have arrived at The Dungeon™ in search of such things.

The Dungeon's™ own magic spawns guardians: Bugs, Imps, and Demon Dogs. But, some of that magic lies behind each door for you to claim as your own.

The Dungeon's™ magic is dark and powerful, and your greed grows as you delve, becoming unable to leave.

How far into the depths will you get before you succumb to the magic you have made your own?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Middle Section" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 75
alignment = 1

[node name="Title" type="RichTextLabel" parent="Panel/HBoxContainer/Middle Section"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.990725, 0, 0.378049, 1)
theme_override_font_sizes/normal_font_size = 75
text = "The Depths of Magic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play Button" type="Button" parent="Panel/HBoxContainer/Middle Section"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Quit Button" type="Button" parent="Panel/HBoxContainer/Middle Section"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Controls section" type="HBoxContainer" parent="Panel/HBoxContainer/Middle Section"]
layout_mode = 2
size_flags_vertical = 3

[node name="Controls label" type="Label" parent="Panel/HBoxContainer/Middle Section/Controls section"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Controls:
WASD or Arrow Keys to move
Hold Left Mouse or Space to attack
Esc to pause game"
horizontal_alignment = 1

[node name="RightSection" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Mute Button" type="Button" parent="Panel/HBoxContainer/RightSection"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/RightSection/Mute Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_51ffj")

[node name="volume slider" type="HSlider" parent="Panel/HBoxContainer/RightSection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 2.0
step = 0.001

[node name="right buffer" type="Control" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[connection signal="button_up" from="Panel/HBoxContainer/Middle Section/Play Button" to="." method="_on_play_button_button_up"]
[connection signal="pressed" from="Panel/HBoxContainer/Middle Section/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="button_up" from="Panel/HBoxContainer/RightSection/Mute Button" to="." method="_on_mute_button_button_up"]
[connection signal="value_changed" from="Panel/HBoxContainer/RightSection/volume slider" to="." method="_on_h_slider_value_changed"]
